Issue 5907 - Fixed locale menu and spacing of blog affected by 84ac72993b9d

--- a/static/css/index-mobile.css
+++ b/static/css/index-mobile.css
@@ -1,7 +1,12 @@
+#content,
+#blog
+{
+  padding-top: 6.5em;
+}
+
 #content
 {
   text-align: center;
-  padding-top: 6.5em;
 }
 
 #abb-banner
