--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,4 +1,5 @@
-#content
+#content,
+#blog
 {
   padding-top: 9em;
 }
