--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,7 +10,8 @@ body
   line-height: 1.5;
 }
 
-#content
+#content,
+#blog
 {
   padding-bottom: 2em;
   padding-top: 4em;
